--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
         <div class="row" id="first-row">
             <div class='before-eating'>
                 <ul id="list-before">
-
+                    <li class="title">Burgers Available</li>
                 </ul>
             </div>
             <div class="after-eating">
                 <ul id="list-after">
-                    
+                    <li class="title">Burgers Eaten</li>
                 </ul>
             </div>
         </div>
@@ -29,10 +29,9 @@
     <div class="row" id="second-row">
         <form>
             <div class="form-group">
-                <label for="burger-name">Name</label>
                 <input type="text" class="form-control" id="burger-name" placeholder="burger name ...">
             </div>
-            <button type='submit' class='submit-button'>Submit</button>
+            <button type='submit' class='submit-button, btn btn-success' id="create-burger">Create Burger</button>
         </form>
     </div>
     <script src="js/views.js" type="text/javascript"></script>
